--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
             <option value="ravioles4quesos">Ravioles con salsa 4 quesos</option>
         </select>
     </div>
-    <script src="../JS/prueba.js"></script>
+    <script src="JS/prueba.js"></script>
 </body>
 </html>
