--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Coderhouse</title>
-    <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <div class="containerBudget">
@@ -34,6 +34,6 @@
             <option value="ravioles4quesos">Ravioles con salsa 4 quesos</option>
         </select>
     </div>
-    <script src="JS/prueba.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 </html>
